# engine_web-ifc

./: .dockerignore  .gitignore  .tsbuildinfo  CMakeLists.txt  Dockerfile  Dockerfile.build  README.md  add-wasm-path.js  apidocs.md  benchmark.md  contributing.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  rollup.config.js  server.js  test.ifc  tsconfig.browser.json  tsconfig.json  tsconfig.node.json  typedoc.json  wasm_compile.bat  wasm_compile.ps1  wasm_host.bat  wasm_setup_env.bat  web-ifc-server.cpp  web-ifc-server.vcxproj  web-ifc-server.vcxproj.filters  web-ifc-test.cpp  web-ifc-wasm.cpp  web-ifc.cpp  web-ifc.sln  web-ifc.vcxproj  web-ifc.vcxproj.filters
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
benchmark/: .gitignore  benchmark.ts  package-lock.json  package.json
build_scripts/: build-ts-api.sh
lib/: web-ifc-api.ts  web-ifc-three.ts
schema/: gen.js  gen_functional_types.ts
src/: .gitignore  IFC4x2.ts  ifc-schema.ts  ifc2x4.js  ifc2x4.ts  ifc2x4_helper.js  ifc2x4_helper.ts  ifc_schema_helper.ts  index.ts  setversion.js  web-ifc-api-loader-browser.ts  web-ifc-api-loader-node.ts  web-ifc-api.ts  web-ifc.ts
src/cpp/: CMakeLists.txt  version.h  web-ifc-test.cpp  web-ifc-wasm.cpp
src/cpp/cmake/: web-ifc-config.cmake.in
src/cpp/geometry/: IfcGeometryLoader.cpp  IfcGeometryLoader.h  IfcGeometryProcessor.cpp  IfcGeometryProcessor.h
src/cpp/geometry/operations/: curve-utils.h  geometryutils.h  mesh_utils.h  nurbs.cpp  nurbs.h
src/cpp/geometry/operations/boolean-utils/: aabb.h  clip-mesh.h  eps.h  fuzzy-bools.h  geometry.h  intersect-ray-tri.h  is-inside-boundary.h  is-inside-mesh.h  main.cpp  math.h  obj-exporter.h  shared-position.h
src/cpp/geometry/representation/: IfcCurve.h  IfcGeometry.cpp  IfcGeometry.h  geometry.h
src/cpp/modelmanager/: ModelManager.cpp  ModelManager.h
src/cpp/parsing/: IfcFileStream.cpp  IfcLoader.cpp  IfcLoader.h  IfcTokenChunk.cpp  IfcTokenStream.cpp  IfcTokenStream.h  string_parsing.cpp
src/cpp/schema/: IfcSchemaManager.cpp  ifc-schema.h
src/cpp/test/: dumpToThree.h  encoding_test.cpp  io_helpers.cpp  io_helpers.h  web-ifc-test.cpp
src/cpp/wasm/: web-ifc-wasm.cpp
src/cpp/web-ifc/cache/: IfcCache.cpp  IfcCache.h
src/cpp/web-ifc/geometry/: IfcGeometryLoader.cpp  IfcGeometryLoader.h  IfcGeometryProcessor.cpp  IfcGeometryProcessor.h  nurbs.cpp  nurbs.h
src/cpp/web-ifc/geometry/operations/: curve-utils.h  geometryutils.h  mesh-orientation-repair.cpp  mesh-orientation-repair.h  mesh_utils.h
src/cpp/web-ifc/geometry/operations/bim-geometry/: aabb.cpp  aabb.h  alignment.cpp  alignment.h  arc.cpp  arc.h  boolean.cpp  boolean.h  booleanUtils.h  buffers.cpp  buffers.h  circularSweep.cpp  circularSweep.h  clothoid.cpp  clothoid.h  curve.cpp  curve.h  cylindricalRevolution.cpp  cylindricalRevolution.h  epsilons.h  extrusion.cpp  extrusion.h  face.cpp  face.h  geometry.cpp  geometry.h  parabola.cpp  parabola.h  plane.cpp  plane.h  profile.cpp  profile.h  profileI.cpp  profileI.h  revolution.cpp  revolution.h  sweep.cpp  sweep.h  utils.h
src/cpp/web-ifc/geometry/operations/bimGeometry/: Curve.cpp  Curve.h  epsilons.h  functions.h
src/cpp/web-ifc/geometry/operations/boolean-utils/: aabb.h  bvh.h  clip-mesh.h  eps.h  fuzzy-bools.h  geometry.h  intersect-ray-tri.h  is-inside-mesh.h  loop-finder.h  math.h  obj-exporter.h  shared-position.h  svg.h  util.h
src/cpp/web-ifc/geometry/representation/: IfcCurve.cpp  IfcCurve.h  IfcGeometry.cpp  IfcGeometry.h  geometry.h
src/cpp/web-ifc/modelmanager/: ModelManager.cpp  ModelManager.h
src/cpp/web-ifc/parsing/: IfcFileStream.cpp  IfcLoader.cpp  IfcLoader.h  IfcTokenChunk.cpp  IfcTokenStream.cpp  IfcTokenStream.h  string_parsing.cpp  uuid_utils.cpp
src/cpp/web-ifc/schema/: IfcSchemaManager.cpp  IfcSchemaManager.h  ifc-schema.h  schema-functions.cpp  schema-names.h
src/wasm/: .gitignore  CMakeLists.txt  LoaderSettings.h  regression.cpp  version.h  web-ifc-api.cpp  web-ifc-test.cpp
src/wasm/geometry/: IfcGeometryLoader.cpp  IfcGeometryLoader.h  IfcGeometryProcessor.cpp  IfcGeometryProcessor.h
src/wasm/geometry/operations/: bool-mesh-mesh.h  curve-utils.h  geometryutils.h  intersect-mesh-mesh.h  intersect-ray-tri.h  is-inside-mesh.h  line-segment-intersect.h  mesh_utils.h  triangulate-with-boundaries.h
src/wasm/geometry/representation/: AABB.cpp  AABB.h  IfcCurve.cpp  IfcCurve.h  IfcGeometry.cpp  IfcGeometry.h  geometry.h
src/wasm/include/: ifc-meta-data.h  ifc-schema.h  ifc2x4.h  util.h  web-ifc-geometry.h  web-ifc.h
src/wasm/include/math/: bool-mesh-mesh.h  intersect-mesh-mesh.h  intersect-ray-tri.h  is-inside-mesh.h  line-segment-intersect.h  mesh_utils.h  triangulate-with-boundaries.h
src/wasm/include/parsing/: p21decode.h  parser.h  refs.h  tokenizer.h
src/wasm/include/tinynurbs/: tinynurbs.h
src/wasm/include/tinynurbs/core/: basis.h  check.h  curve.h  evaluate.h  modify.h  surface.h
src/wasm/include/tinynurbs/io/: obj.h
src/wasm/include/tinynurbs/util/: array2.h  util.h
src/wasm/parsing/: IfcFileStream.cpp  IfcLoader.cpp  IfcLoader.h  IfcTokenChunk.cpp  IfcTokenStream.cpp  IfcTokenStream.h  LoaderError.h  ifc-schema.h  number_parsing.cpp  string_parsing.cpp
src/wasm/parsing/helpers/: crc_tables.h  loader_helpers.h  p21decode.h
src/wasm/schema/: IfcSchemaManager.cpp  IfcSchemaManager.h  ifc-schema.h  schema-functions.cpp
src/wasm/test/: core_test.cpp  encoding_test.cpp  io_helpers.cpp  io_helpers.h  main.cpp  util_test.cpp
src/wasm/utility/: LoaderError.cpp  LoaderError.h  LoaderSettings.h  Logging.cpp  Logging.h
tests/: test_issue_1881.cjs
threejs/: .gitignore  package-lock.json  package.json  tsconfig.json  web-ifc-three.d.ts  web-ifc-three.js  web-ifc-three.ts
viewer/: index.html  web-ifc-scene.ts  web-ifc-three.ts  web-ifc-viewer.ts
wasm/: wasm_compile_release.ps1  web-ifc-api.cpp  web-ifc-test.cpp
web-ifc-cpp/: bool-mesh-mesh.h  crack_atof.h  ifc2x3.h  intersect-mesh-mesh.h  is-inside-mesh.h  line-segment-intersect.h  triangulate-with-boundaries.h  util.h  web-ifc-geometry.h  (+1 more)
(+181 files in other folders)
